added initial three part section

--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
+
+    <!--=====Font awesome css-->
+    <link rel="stylesheet" href="/font-awesome-4.5.0/css/font-awesome.css">
+
+
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
+</head>
+
+<body>
+    <!--=======This can be a landing title!-->
+    <div class="">
+        <div class="row">
+            <div class="large-12 columns text-center">
+                <h1>Site based on Foundation</h1>
+                <h3><small>Trusted site source</small></h3>
+                <button class="hollow button large" href="#">Read more</button>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
-      <div class="large-12 columns text-center">
-        <h1>Site based on Foundation</h1>
-          <h1><small>Trusted site source</small></h1>
-          <a href="#" class="">Read more</a>
-      </div>
+        <div class="column small-12 medium-4 text-center">
+            <h1> <span class="fa fa-facebook fa-3x"></span></h1>
+            <h2>Responsive</h2>
+            <p>Lorem ipsum dolor sit amet, est oblique quaestio consulatu in, id vim consul mollis disputando, vix no erat audire commune.</p>
+
+        </div>
+        <div class="column small-12 medium-4"></div>
+        <div class="column small-12 medium-4"></div>
+
     </div>
 
 
+
+
     <script src="js/vendor/jquery.js"></script>
+    <script src="/js/vendor/foundation.js"></script>
+
+
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
