added social sites icons

--- a/index.html
+++ b/index.html
@@ -27,18 +27,39 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="column small-12 medium-4 text-center">
-            <h1> <span class="fa fa-facebook fa-3x"></span></h1>
-            <h2>Responsive</h2>
-            <p>Lorem ipsum dolor sit amet, est oblique quaestio consulatu in, id vim consul mollis disputando, vix no erat audire commune.</p>
 
+    <div class="">
+        <div class="column small-10 small-centered">
+            <div class="row">
+                <div class="column small-12 medium-4 text-center">
+                    <h1> <span class="fa fa-rocket fa-3x"></span></h1>
+                    <h2>Responsive</h2>
+                    <p>Lorem ipsum dolor sit amet, est oblique quaestio consulatu in, id vim consul mollis disputando, vix no erat audire commune.</p>
+                </div>
+                <div class="column small-12 medium-4 text-center">
+                    <h1> <span class="fa fa- fa-sellsy fa-3x"></span></h1>
+                    <h2>Responsive</h2>
+                    <p>Lorem ipsum dolor sit amet, est oblique quaestio consulatu in, id vim consul mollis disputando, vix no erat audire commune.</p>
+                </div>
+                <div class="column small-12 medium-4 text-center">
+                    <h1> <span class="fa fa-unlink fa-3x"></span></h1>
+                    <h2>Responsive</h2>
+                    <p>Lorem ipsum dolor sit amet, est oblique quaestio consulatu in, id vim consul mollis disputando, vix no erat audire commune.</p>
+                </div>
+
+            </div>
         </div>
-        <div class="column small-12 medium-4"></div>
-        <div class="column small-12 medium-4"></div>
-
     </div>
 
+<div class=""><div class="text-center">
+
+    <span class="fa fa-facebook-official"></span>
+    <span class="fa fa-twitter-square"></span>
+    <span class="fa fa-github"></span>
+    <span class="fa fa-linkedin"></span>
+
+    </div>
+    </div>
 
 
 
