--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!--=======This can be a landing title!-->
-    <div class="">
+    <div class="startup-hero">
         <div class="row">
             <div class="large-12 columns text-center">
                 <h1>Site based on Foundation</h1>
@@ -60,6 +60,25 @@
 
     </div>
     </div>
+
+
+    JavaScript Reference <br>
+Initializing<br>
+The file foundation.sticky.js must be included in your JavaScript to use this plugin, along with<br> foundation.core.js. This plugin also requires these<br> utility libraries:<br>
+
+foundation.util.triggers.js
+foundation.util.mediaQuery.js
+Foundation.Sticky
+Creates a new instance of a sticky thing.
+
+
+
+    <div data-sticky-container>
+  <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1" data-btm-anchor="content:bottom">
+    <div class="title-bar-left">Copyright @ 2016</div>
+    <div class="title-bar-right">Right<!-- Content --></div>
+  </div>
+</div>
 
 
 
