--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
 
+
+<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+
     <!--=====Font awesome css-->
     <link rel="stylesheet" href="/font-awesome-4.5.0/css/font-awesome.css">
 
